-Finised code for inference. -Update README.MD

--- a/main_inference.ipynb
+++ b/main_inference.ipynb
@@ -2,58 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "05c94d9c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\TDV\\AppData\\Local\\Temp\\ipykernel_9576\\2080377449.py:46: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  ckpt = torch.load(WEIGHT, map_location=\"cpu\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "raw output shape: torch.Size([1, 84, 8400])\n",
-      "Before scale: x_min, y_min, x_max, y_max ranges: 35.4375 153.25 640.5 529.5\n",
-      "Sample raw detection (first 5):\n",
-      "0 [365.75      313.        456.25      498.          0.8540039   0.       ]\n",
-      "1 [303.5        366.         541.         507.           0.85058594\n",
-      "   3.        ]\n",
-      "2 [175.5     311.25    317.75    410.25      0.84375   2.     ]\n",
-      "3 [323.5       301.5       345.5       364.5         0.7441406   0.       ]\n",
-      "4 [571.        284.5       640.        441.          0.7241211   0.       ]\n",
-      "After scale (to original image): x_min,x_max,y_min,y_max ranges: 79.734375 1440.0 106.3125 952.875\n",
-      "Saved inference_result.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# inference_letterbox.py\n",
     "import torch, cv2, numpy as np\n",
     "from utils.util import non_max_suppression\n",
     "import torchvision.transforms as T\n",
-    "import yaml\n",
-    "\n",
-    "\n",
+    "import yaml\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "55ebcd1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ---------- params ----------\n",
     "WEIGHT = \"weights/best.pt\"\n",
     "IMG_PATH = \"dataset/VietNam_street.png\"   # change if needed\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
     "INPUT_SIZE = (640, 640)          # height, width used by model\n",
     "CONF_THR = 0.25\n",
-    "IOU_THR = 0.45\n",
-    "\n",
-    "\n",
+    "IOU_THR = 0.45\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7f10f9ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open(DATA_YAML, \"r\") as f:\n",
     "    data_dict = yaml.safe_load(f)\n",
     "\n",
-    "names = data_dict[\"names\"]   # dict {0:\"person\",1:\"bicycle\",...}\n",
-    "\n",
+    "names = data_dict[\"names\"]   # dict {0:\"person\",1:\"bicycle\",...}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a3da5b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ---------- utils ----------\n",
     "def letterbox(img, new_shape=(640, 640), color=(114, 114, 114)):\n",
     "    # img: BGR numpy (H, W, C) as loaded by cv2\n",
@@ -73,10 +69,25 @@
     "    right = int(round(dw / 2 + 0.1))\n",
     "    img_padded = cv2.copyMakeBorder(img_resized, top, bottom, left, right,\n",
     "                                    cv2.BORDER_CONSTANT, value=color)\n",
-    "    return img_padded, r, (left, top)\n",
-    "\n",
-    "\n",
-    "\n",
+    "    return img_padded, r, (left, top)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d04361af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\TDV\\AppData\\Local\\Temp\\ipykernel_9576\\1903992144.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  ckpt = torch.load(WEIGHT, map_location=\"cpu\")\n"
+     ]
+    }
+   ],
+   "source": [
     "# ---------- load model ----------\n",
     "ckpt = torch.load(WEIGHT, map_location=\"cpu\")\n",
     "if 'model' in ckpt:\n",
@@ -90,8 +101,16 @@
     "if next(model.parameters()).dtype == torch.half:\n",
     "    model = model.half()\n",
     "else:\n",
-    "    model = model.float()\n",
-    "\n",
+    "    model = model.float()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9e765ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ---------- load + preprocess with letterbox ----------\n",
     "# read with cv2 (BGR), convert to RGB only where needed\n",
     "img_bgr = cv2.imread(IMG_PATH)\n",
@@ -105,8 +124,34 @@
     "img_tensor = torch.from_numpy(img_rgb).permute(2, 0, 1).unsqueeze(0).float() / 255.0\n",
     "img_tensor = img_tensor.to(device)\n",
     "if next(model.parameters()).dtype == torch.half:\n",
-    "    img_tensor = img_tensor.half()\n",
-    "\n",
+    "    img_tensor = img_tensor.half()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0d92f005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "raw output shape: torch.Size([1, 84, 8400])\n",
+      "Before scale: x_min, y_min, x_max, y_max ranges: 35.4375 153.25 640.5 529.5\n",
+      "Sample raw detection (first 5):\n",
+      "0 [365.75      313.        456.25      498.          0.8540039   0.       ]\n",
+      "1 [303.5        366.         541.         507.           0.85058594\n",
+      "   3.        ]\n",
+      "2 [175.5     311.25    317.75    410.25      0.84375   2.     ]\n",
+      "3 [323.5       301.5       345.5       364.5         0.7441406   0.       ]\n",
+      "4 [571.        284.5       640.        441.          0.7241211   0.       ]\n",
+      "After scale (to original image): x_min,x_max,y_min,y_max ranges: 79.734375 1440.0 106.3125 952.875\n",
+      "Saved inference_result.jpg\n"
+     ]
+    }
+   ],
+   "source": [
     "# ---------- forward ----------\n",
     "with torch.no_grad():\n",
     "    out = model(img_tensor)\n",
@@ -114,7 +159,6 @@
     "        out = out[0]   # repo sometimes returns (pred, loss) or similar\n",
     "\n",
     "# ensure out shape is [B, C, anchors] as util.non_max_suppression expects\n",
-    "# (in your case you observed [1, 84, 8400] which is correct)\n",
     "print(\"raw output shape:\", out.shape)\n",
     "\n",
     "# ---------- NMS (repo util) ----------\n",
