adding some new comments

--- a/main_inference.ipynb
+++ b/main_inference.ipynb
@@ -106,25 +106,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9e765ff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- load + preprocess with letterbox ----------\n",
     "# read with cv2 (BGR), convert to RGB only where needed\n",
-    "img_bgr = cv2.imread(IMG_PATH)\n",
+    "img_bgr = cv2.imread(IMG_PATH) #np.array (H, W, 3)\n",
     "if img_bgr is None:\n",
     "    raise FileNotFoundError(f\"Image not found: {IMG_PATH}\")\n",
-    "orig_h, orig_w = img_bgr.shape[:2]\n",
+    "orig_h, orig_w = img_bgr.shape[:2] #np.array (H, W)\n",
     "\n",
-    "img_pad, gain, (pad_w, pad_h) = letterbox(img_bgr, new_shape=INPUT_SIZE)\n",
+    "img_pad, gain, (pad_w, pad_h) = letterbox(img_bgr, new_shape=INPUT_SIZE) \n",
+    "'''\n",
+    "Gọi hàm letterbox để resize ảnh về kích thước chuẩn của YOLO (INPUT_SIZE, ví dụ 640×640).\n",
+    "\n",
+    "Letterbox = resize ảnh nhưng vẫn giữ tỉ lệ khung hình (aspect ratio) → phần thừa sẽ được padding màu đen.\n",
+    "Trả về:\n",
+    "\n",
+    "img_pad: ảnh sau khi resize + pad.\n",
+    "\n",
+    "gain: hệ số scale (ảnh gốc → ảnh mới).\n",
+    "\n",
+    "(pad_w, pad_h): độ pad thêm ở 2 chiều.\n",
+    "\n",
+    "Thông tin gain, pad_w, pad_h được dùng sau này để chuyển ngược bbox từ ảnh YOLO về ảnh gốc.\n",
+    "'''\n",
     "# convert to RGB floating tensor [1,3,H,W] in 0..1\n",
-    "img_rgb = cv2.cvtColor(img_pad, cv2.COLOR_BGR2RGB)\n",
+    "img_rgb = cv2.cvtColor(img_pad, cv2.COLOR_BGR2RGB) #Chuyển từ BGR → RGB (YOLO và PyTorch thường chuẩn hóa input thành RGB).\n",
     "img_tensor = torch.from_numpy(img_rgb).permute(2, 0, 1).unsqueeze(0).float() / 255.0\n",
+    "'''\n",
+    "torch.from_numpy(img_rgb): chuyển ảnh NumPy → Tensor PyTorch.\n",
+    "\n",
+    ".permute(2, 0, 1): đổi trục từ (H, W, C) → (C, H, W) (PyTorch format).\n",
+    "\n",
+    ".unsqueeze(0): thêm batch dimension → [1, C, H, W].\n",
+    "\n",
+    ".float() / 255.0: đổi từ uint8 (0–255) sang float32 (0–1) để mạng dễ học\n",
+    "'''\n",
     "img_tensor = img_tensor.to(device)\n",
     "if next(model.parameters()).dtype == torch.half:\n",
-    "    img_tensor = img_tensor.half()\n"
+    "    img_tensor = img_tensor.half()\n",
+    "'''\n",
+    "    Nếu mô hình đang ở dạng half precision (FP16) → convert input sang .half() để đồng bộ.\n",
+    "\n",
+    "Dùng khi inference trên GPU để tăng tốc và tiết kiệm bộ nhớ.\n",
+    "'''\n"
    ]
   },
   {
