--- a/main_inference.ipynb
+++ b/main_inference.ipynb
@@ -107,6 +107,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a027fbdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from utils.util import non_max_suppression\n",
+    "\n",
+    "# Assume you already have: model, device, names, letterbox() from before\n",
+    "\n",
+    "def load_images_as_batch(img_paths, new_shape=(640, 640)):\n",
+    "    \"\"\"\n",
+    "    Loads multiple images, applies letterbox resize, and returns:\n",
+    "    - batch tensor [B, 3, H, W]\n",
+    "    - list of (original_h, original_w)\n",
+    "    - list of (gain, (pad_w, pad_h))\n",
+    "    \"\"\"\n",
+    "    imgs_tensor = []\n",
+    "    shapes = []\n",
+    "    ratios = []\n",
+    "\n",
+    "    for path in img_paths:\n",
+    "        img_bgr = cv2.imread(path)\n",
+    "        if img_bgr is None:\n",
+    "            raise FileNotFoundError(f\"Image not found: {path}\")\n",
+    "\n",
+    "        orig_h, orig_w = img_bgr.shape[:2]\n",
+    "        img_pad, gain, (pad_w, pad_h) = letterbox(img_bgr, new_shape=new_shape)\n",
+    "\n",
+    "        img_rgb = cv2.cvtColor(img_pad, cv2.COLOR_BGR2RGB)\n",
+    "        tensor = torch.from_numpy(img_rgb).permute(2, 0, 1).float() / 255.0\n",
+    "        imgs_tensor.append(tensor)\n",
+    "        shapes.append((orig_h, orig_w))\n",
+    "        ratios.append((gain, pad_w, pad_h))\n",
+    "\n",
+    "    batch_tensor = torch.stack(imgs_tensor, 0)  # [B,3,H,W]\n",
+    "    return batch_tensor, shapes, ratios\n",
+    "\n",
+    "\n",
+    "def run_inference_batch(model, img_paths, conf_thres=0.25, iou_thres=0.45):\n",
+    "    batch_tensor, shapes, ratios = load_images_as_batch(img_paths, new_shape=(640,640))\n",
+    "    batch_tensor = batch_tensor.to(device)\n",
+    "\n",
+    "    if next(model.parameters()).dtype == torch.half:\n",
+    "        batch_tensor = batch_tensor.half()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        preds = model(batch_tensor)\n",
+    "        if isinstance(preds, (list, tuple)):\n",
+    "            preds = preds[0]\n",
+    "\n",
+    "    detections = non_max_suppression(preds, confidence_threshold=conf_thres, iou_threshold=iou_thres)\n",
+    "\n",
+    "    results = []\n",
+    "    for i, det in enumerate(detections):\n",
+    "        orig_h, orig_w = shapes[i]\n",
+    "        gain, pad_w, pad_h = ratios[i]\n",
+    "\n",
+    "        if det is not None and len(det):\n",
+    "            det = det.clone()\n",
+    "            # de-letterbox\n",
+    "            det[:, [0, 2]] -= pad_w\n",
+    "            det[:, [1, 3]] -= pad_h\n",
+    "            det[:, :4] /= gain\n",
+    "            det[:, [0, 2]] = det[:, [0, 2]].clamp(0, orig_w)\n",
+    "            det[:, [1, 3]] = det[:, [1, 3]].clamp(0, orig_h)\n",
+    "        results.append(det)\n",
+    "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9e765ff7",
    "metadata": {},
    "outputs": [],
