--- a/main_inference.ipynb
+++ b/main_inference.ipynb
@@ -5,34 +5,66 @@
    "execution_count": 1,
    "id": "05c94d9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[WinError 126] The specified module could not be found. Error loading \"c:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mcv2\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m non_max_suppression\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myaml\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\__init__.py:262\u001b[39m\n\u001b[32m    258\u001b[39m                     \u001b[38;5;28;01mraise\u001b[39;00m err\n\u001b[32m    260\u001b[39m         kernel32.SetErrorMode(prev_error_mode)\n\u001b[32m--> \u001b[39m\u001b[32m262\u001b[39m     \u001b[43m_load_dll_libraries\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    263\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m _load_dll_libraries\n\u001b[32m    266\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_preload_cuda_deps\u001b[39m(lib_folder: \u001b[38;5;28mstr\u001b[39m, lib_name: \u001b[38;5;28mstr\u001b[39m) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\__init__.py:258\u001b[39m, in \u001b[36m_load_dll_libraries\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    254\u001b[39m             err = ctypes.WinError(ctypes.get_last_error())\n\u001b[32m    255\u001b[39m             err.strerror += (\n\u001b[32m    256\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m Error loading \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdll\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m or one of its dependencies.\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m             )\n\u001b[32m--> \u001b[39m\u001b[32m258\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m err\n\u001b[32m    260\u001b[39m kernel32.SetErrorMode(prev_error_mode)\n",
+      "\u001b[31mOSError\u001b[39m: [WinError 126] The specified module could not be found. Error loading \"c:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies."
+     ]
+    }
+   ],
    "source": [
-    "# inference_letterbox.py\n",
-    "import torch, cv2, numpy as np\n",
+    "import torch, cv2\n",
     "from utils.util import non_max_suppression\n",
-    "# import torchvision.transforms as T\n",
+    "\n",
     "import yaml\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "id": "ed19d91f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (717537615.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpython -m venv venv\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "python -m venv venv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- params ----------\n",
     "WEIGHT = \"weights/best.pt\"\n",
-    "IMG_PATH = \"dataset/VietNam_street.png\"   # change if needed\n",
+    "IMG_PATH = [\"dataset/Highway.png\", \"dataset/VietNam_street.png\"]\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
-    "INPUT_SIZE = (640, 640)          # height, width used by model\n",
+    "INPUT_SIZE = (640, 640) \n",
     "CONF_THR = 0.25\n",
     "IOU_THR = 0.45\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7f10f9ca",
    "metadata": {},
    "outputs": [],
@@ -45,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -74,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d04361af",
    "metadata": {},
    "outputs": [
@@ -106,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -201,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7306a6bc",
    "metadata": {},
    "outputs": [
@@ -215,10 +247,9 @@
     }
    ],
    "source": [
-    "img_paths = [\"dataset/Highway.png\", \"dataset/VietNam_street.png\"]\n",
-    "detections = run_inference_batch(model, img_paths)\n",
+    "detections = run_inference_batch(model, IMG_PATH)\n",
     "\n",
-    "for path, det in zip(img_paths, detections):\n",
+    "for path, det in zip(IMG_PATH, detections):\n",
     "    img = cv2.imread(path)\n",
     "    if det is not None:\n",
     "        for *xyxy, conf, cls in det:\n",
