--- a/main_inference.ipynb
+++ b/main_inference.ipynb
@@ -2,53 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "05c94d9c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[WinError 126] The specified module could not be found. Error loading \"c:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m,\u001b[38;5;250m \u001b[39m\u001b[34;01mcv2\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m non_max_suppression\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myaml\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\__init__.py:262\u001b[39m\n\u001b[32m    258\u001b[39m                     \u001b[38;5;28;01mraise\u001b[39;00m err\n\u001b[32m    260\u001b[39m         kernel32.SetErrorMode(prev_error_mode)\n\u001b[32m--> \u001b[39m\u001b[32m262\u001b[39m     \u001b[43m_load_dll_libraries\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    263\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m _load_dll_libraries\n\u001b[32m    266\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_preload_cuda_deps\u001b[39m(lib_folder: \u001b[38;5;28mstr\u001b[39m, lib_name: \u001b[38;5;28mstr\u001b[39m) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\__init__.py:258\u001b[39m, in \u001b[36m_load_dll_libraries\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    254\u001b[39m             err = ctypes.WinError(ctypes.get_last_error())\n\u001b[32m    255\u001b[39m             err.strerror += (\n\u001b[32m    256\u001b[39m                 \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m Error loading \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdll\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m or one of its dependencies.\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m             )\n\u001b[32m--> \u001b[39m\u001b[32m258\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m err\n\u001b[32m    260\u001b[39m kernel32.SetErrorMode(prev_error_mode)\n",
-      "\u001b[31mOSError\u001b[39m: [WinError 126] The specified module could not be found. Error loading \"c:\\Users\\TDV\\OneDrive - ut.edu.vn\\Documents\\python\\machine_learning\\deep_learning\\computer vision\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\lib\\shm.dll\" or one of its dependencies."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch, cv2\n",
     "from utils.util import non_max_suppression\n",
     "\n",
-    "import yaml\n"
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ed19d91f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (717537615.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mpython -m venv venv\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "python -m venv venv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
@@ -64,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7f10f9ca",
    "metadata": {},
    "outputs": [],
@@ -77,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -106,22 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d04361af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\TDV\\AppData\\Local\\Temp\\ipykernel_23360\\1903992144.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  ckpt = torch.load(WEIGHT, map_location=\"cpu\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ---------- load model ----------\n",
-    "ckpt = torch.load(WEIGHT, map_location=\"cpu\")\n",
+    "ckpt = torch.load(WEIGHT, map_location=\"cpu\", weights_only=False)\n",
     "if 'model' in ckpt:\n",
     "    model = ckpt['model']\n",
     "else:\n",
@@ -138,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -233,10 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7306a6bc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\document\\python\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\functional.py:554: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:4324.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
