-Add final docs for branch.

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -164,7 +164,7 @@
     "# ---- main evaluation ----\n",
     "def main():\n",
     "    # load model from checkpoint exactly as your inference code does\n",
-    "    ckpt = torch.load(WEIGHT, map_location=\"cpu\")\n",
+    "    ckpt = torch.load(WEIGHT, map_location=\"cpu\", weights_only=False)\n",
     "    if 'model' not in ckpt:\n",
     "        raise RuntimeError(\"Checkpoint does not contain 'model' key.\")\n",
     "    model = ckpt['model']\n",
