--- a/src/main_inference.ipynb
+++ b/src/main_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "05c94d9c",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- params ----------\n",
-    "WEIGHT = \"weights/best.pt\"\n",
-    "IMG_PATH = [\"dataset/Highway.png\", \"dataset/VietNam_street.png\"]\n",
+    "WEIGHT = \"internal_assets/weights/best.pt\"\n",
+    "IMG_PATH = [\"internal_assets/dataset/Highway.png\", \"internal_assets/dataset/VietNam_street.png\"]\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
     "INPUT_SIZE = (640, 640) \n",
     "CONF_THR = 0.25\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7f10f9ca",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "d04361af",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -191,24 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7306a6bc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\document\\python\\YOLOv11-pt\\venv\\Lib\\site-packages\\torch\\functional.py:554: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:4324.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved inference_result_Highway.png\n",
-      "Saved inference_result_VietNam_street.png\n"
+      "Saved internal_assets/inference_result/inference_result_Highway.png\n",
+      "Saved internal_assets/inference_result/inference_result_VietNam_street.png\n"
      ]
     }
    ],
@@ -226,7 +218,7 @@
     "            cv2.rectangle(img, (x1,y1), (x2,y2), color, 2)\n",
     "            cv2.putText(img, f\"{cls_name} {conf:.2f}\", (x1, max(y1-6,0)),\n",
     "                        cv2.FONT_HERSHEY_SIMPLEX, 0.6, color, 2)\n",
-    "    save_path = f\"inference_result_{path.split('/')[-1]}\"\n",
+    "    save_path = f\"internal_assets/inference_result/inference_result_{path.split('/')[-1]}\"\n",
     "    cv2.imwrite(save_path, img)\n",
     "    print(f\"Saved {save_path}\")\n"
    ]
