feat: add load_thresholds_from_args_yaml() to load manually edited confidence thresholds
feat: update non_max_suppression_editable() to use manual confidence thresholds with fallback to defaults

--- a/src/main_inference.ipynb
+++ b/src/main_inference.ipynb
@@ -2,27 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "05c94d9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch, cv2\n",
-    "from utils.util import non_max_suppression\n",
+    "from utils.util import non_max_suppression, non_max_suppression_editable, load_thresholds_from_args_yaml\n",
     "\n",
     "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- params ----------\n",
     "WEIGHT = \"internal_assets/weights/best.pt\"\n",
-    "IMG_PATH = [\"internal_assets/dataset/Highway.png\", \"internal_assets/dataset/VietNam_street.png\"]\n",
+    "IMG_PATH = [\"internal_assets/dataset/VietNam_street.png\",\n",
+    "            \"internal_assets/dataset/Highway.png\",\n",
+    "            \"internal_assets/dataset/VN_Highway.png\",\n",
+    "            \"internal_assets/dataset/Result_image.jpg\"]\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
     "INPUT_SIZE = (640, 640) \n",
     "CONF_THR = 0.25\n",
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "d04361af",
    "metadata": {},
    "outputs": [],
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -163,7 +166,13 @@
     "        if isinstance(preds, (list, tuple)):\n",
     "            preds = preds[0]\n",
     "\n",
-    "    detections = non_max_suppression(preds, confidence_threshold=conf_thres, iou_threshold=iou_thres)\n",
+    "    # detections = non_max_suppression(preds, confidence_threshold=conf_thres, iou_threshold=iou_thres)\n",
+    "    \n",
+    "    per_class_dict, per_class_list, names = load_thresholds_from_args_yaml('utils/args.yaml', default_threshold=CONF_THR)\n",
+    "\n",
+    "    # Then call your NMS:\n",
+    "    # Option A: pass dict (works with the NMS implementation I gave earlier)\n",
+    "    detections = non_max_suppression_editable(preds, confidence_threshold=per_class_dict, iou_threshold=0.45, default_threshold=CONF_THR)\n",
     "\n",
     "    results = []\n",
     "    for i, det in enumerate(detections):\n",
@@ -191,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "7306a6bc",
    "metadata": {},
    "outputs": [
@@ -199,8 +208,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Saved internal_assets/inference_result/inference_result_VietNam_street.png\n",
       "Saved internal_assets/inference_result/inference_result_Highway.png\n",
-      "Saved internal_assets/inference_result/inference_result_VietNam_street.png\n"
+      "Saved internal_assets/inference_result/inference_result_VN_Highway.png\n",
+      "Saved internal_assets/inference_result/inference_result_Result_image.jpg\n"
      ]
     }
    ],
