Added finetune ralated files and folders

--- a/src/main_inference.ipynb
+++ b/src/main_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "05c94d9c",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- params ----------\n",
     "WEIGHT = \"internal_assets/weights/best.pt\"\n",
-    "IMG_PATH = [\"internal_assets/dataset/VietNam_street.png\",\n",
-    "            \"internal_assets/dataset/Highway.png\",\n",
-    "            \"internal_assets/dataset/VN_Highway.png\",\n",
-    "            \"internal_assets/dataset/Result_image.jpg\"]\n",
+    "IMG_PATH = [\"COCO/images/train/Highway.png\"]\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
     "INPUT_SIZE = (640, 640) \n",
     "CONF_THR = 0.25\n",
@@ -34,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "7f10f9ca",
    "metadata": {},
    "outputs": [],
@@ -47,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "d04361af",
    "metadata": {},
    "outputs": [],
@@ -99,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "7306a6bc",
    "metadata": {},
    "outputs": [
@@ -208,10 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved internal_assets/inference_result/inference_result_VietNam_street.png\n",
-      "Saved internal_assets/inference_result/inference_result_Highway.png\n",
-      "Saved internal_assets/inference_result/inference_result_VN_Highway.png\n",
-      "Saved internal_assets/inference_result/inference_result_Result_image.jpg\n"
+      "Saved internal_assets/inference_result/inference_result_Highway.png\n"
      ]
     }
    ],
