--- a/src/inference_output.ipynb
+++ b/src/inference_output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "05c94d9c",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- params ----------\n",
-    "WEIGHT = \"internal_assets/weights/best.pt\"\n",
-    "IMG_PATH = [\"internal_assets/dataset/VN_Highway.png\"]\n",
+    "# WEIGHT = \"internal_assets/weights/best.pt\"\n",
+    "WEIGHT = \"finetuned_head_epoch1.pt\"\n",
+    "IMG_PATH = [\"COCO/images/train/Highway.png\", \"uploads/images/frame_000002.PNG\", \"uploads/images/frame_000030.PNG\"]\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
     "INPUT_SIZE = (640, 640) \n",
     "CONF_THR = 0.25\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "7f10f9ca",
    "metadata": {},
    "outputs": [],
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "d04361af",
    "metadata": {},
    "outputs": [],
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "5441048f",
    "metadata": {},
    "outputs": [],
@@ -185,23 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "e89f46bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 84, 8400])"
+       "torch.Size([5, 8400])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred.shape"
+    "pred[0][0:5].shape"
    ]
   }
  ],
