--- a/src/main_inference.ipynb
+++ b/src/main_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 193,
    "id": "05c94d9c",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 194,
    "id": "55ebcd1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ---------- params ----------\n",
-    "WEIGHT = \"internal_assets/weights/best.pt\"\n",
-    "IMG_PATH = [\"COCO/images/train/Highway.png\"]\n",
+    "# WEIGHT = \"internal_assets/weights/best.pt\"\n",
+    "WEIGHT = \"finetuned_head_epoch1.pt\"\n",
+    "IMG_PATH = [\"COCO/images/train/Highway.png\", \"uploads/images/frame_000002.PNG\", \"uploads/images/frame_000030.PNG\",\n",
+    "            \"internal_assets/dataset/VietNam_street.png\",\n",
+    "            \"internal_assets/dataset/Highway_vertical.png\",\n",
+    "            \"internal_assets/dataset/VN_Highway.png\",\n",
+    "            \"COCO/images/train/img_32.jpg\"]\n",
     "DATA_YAML = \"utils/args.yaml\"   # Path to dataset yaml\n",
     "INPUT_SIZE = (640, 640) \n",
     "CONF_THR = 0.25\n",
@@ -31,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 195,
    "id": "7f10f9ca",
    "metadata": {},
    "outputs": [],
@@ -44,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 196,
    "id": "a3da5b8a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 197,
    "id": "d04361af",
    "metadata": {},
    "outputs": [],
@@ -96,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 198,
    "id": "a027fbdd",
    "metadata": {},
    "outputs": [],
@@ -197,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 199,
    "id": "7306a6bc",
    "metadata": {},
    "outputs": [
@@ -205,7 +210,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved internal_assets/inference_result/inference_result_Highway.png\n"
+      "Saved internal_assets/inference_result/inference_result_Highway.png\n",
+      "Saved internal_assets/inference_result/inference_result_frame_000002.PNG\n",
+      "Saved internal_assets/inference_result/inference_result_frame_000030.PNG\n",
+      "Saved internal_assets/inference_result/inference_result_VietNam_street.png\n",
+      "Saved internal_assets/inference_result/inference_result_Highway_vertical.png\n",
+      "Saved internal_assets/inference_result/inference_result_VN_Highway.png\n",
+      "Saved internal_assets/inference_result/inference_result_img_32.jpg\n"
      ]
     }
    ],
